cloudformation/previous_May:/security-groups.json
[
    {
        "Description": "Security group attached to instances to allow them to securely connect to purify-2. Modification could lead to connection loss.",
        "GroupName": "ec2-rds-1",
        "IpPermissions": [],
        "OwnerId": "474971317339",
        "GroupId": "sg-07734c8c4ab2a830b",
        "IpPermissionsEgress": [
            {
                "FromPort": 5432,
                "IpProtocol": "tcp",
                "IpRanges": [],
                "Ipv6Ranges": [],
                "PrefixListIds": [],
                "ToPort": 5432,
                "UserIdGroupPairs": [
                    {
                        "Description": "Rule to allow connections to purify-2 from any instances this security group is attached to",
                        "GroupId": "sg-07095cdb709bc1118",
                        "UserId": "474971317339"
                    }
                ]
            }
        ],
        "VpcId": "vpc-0c108a0c14b5e9e88"
    },
    {
        "Description": "Security group attached to purify-2 to allow EC2 instances with specific security groups attached to connect to the database. Modification could lead to connection loss.",
        "GroupName": "rds-ec2-1",
        "IpPermissions": [
            {
                "FromPort": 5432,
                "IpProtocol": "tcp",
                "IpRanges": [],
                "Ipv6Ranges": [],
                "PrefixListIds": [],
                "ToPort": 5432,
                "UserIdGroupPairs": [
                    {
                        "Description": "Rule to allow connections from EC2 instances with sg-07734c8c4ab2a830b attached",
                        "GroupId": "sg-07734c8c4ab2a830b",
                        "UserId": "474971317339"
                    },
                    {
                        "Description": "Allow Lamda Purify Crud",
                        "GroupId": "sg-0a19ecc10ac703da3",
                        "UserId": "474971317339"
                    }
                ]
            }
        ],
        "OwnerId": "474971317339",
        "GroupId": "sg-07095cdb709bc1118",
        "IpPermissionsEgress": [],
        "VpcId": "vpc-0c108a0c14b5e9e88"
    },
    {
        "Description": "launch-wizard-1 created 2023-04-17T13:50:47.673Z",
        "GroupName": "launch-wizard-1",
        "IpPermissions": [
            {
                "FromPort": 22,
                "IpProtocol": "tcp",
                "IpRanges": [
                    {
                        "CidrIp": "98.209.125.80/32"
                    }
                ],
                "Ipv6Ranges": [],
                "PrefixListIds": [],
                "ToPort": 22,
                "UserIdGroupPairs": []
            }
        ],
        "OwnerId": "474971317339",
        "GroupId": "sg-0a8dd5c8527294136",
        "IpPermissionsEgress": [
            {
                "IpProtocol": "-1",
                "IpRanges": [
                    {
                        "CidrIp": "0.0.0.0/0"
                    }
                ],
                "Ipv6Ranges": [],
                "PrefixListIds": [],
                "UserIdGroupPairs": []
            }
        ],
        "VpcId": "vpc-0c108a0c14b5e9e88"
    },
    {
        "Description": "default VPC security group",
        "GroupName": "default",
        "IpPermissions": [
            {
                "FromPort": 5432,
                "IpProtocol": "tcp",
                "IpRanges": [
                    {
                        "CidrIp": "98.243.34.52/32"
                    }
                ],
                "Ipv6Ranges": [],
                "PrefixListIds": [],
                "ToPort": 5432,
                "UserIdGroupPairs": []
            }
        ],
        "OwnerId": "474971317339",
        "GroupId": "sg-0a19ecc10ac703da3",
        "IpPermissionsEgress": [
            {
                "IpProtocol": "-1",
                "IpRanges": [
                    {
                        "CidrIp": "0.0.0.0/0"
                    }
                ],
                "Ipv6Ranges": [],
                "PrefixListIds": [],
                "UserIdGroupPairs": []
            }
        ],
        "VpcId": "vpc-0c108a0c14b5e9e88"
    }
]
